--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,34 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-ipch/
+# Visual Studio 2015 cache/options directory
 .vs/
+
+# Visual C++ cache files
+ipch/
+*.aps
+*.ncb
+*.opendb
+*.opensdf
+*.sdf
+*.cachefile
+*.VC.db
+*.VC.VC.opendb
+
+# Visual Studio profiler
+*.psess
+*.vsp
+*.vspx
+*.sap
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
