--- a/Tests/ClothoDB.Test/ClothoDB.Test.vcxproj
+++ b/Tests/ClothoDB.Test/ClothoDB.Test.vcxproj
@@ -165,6 +165,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TimeSeriesBucket.Tests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\TimeSeries\TimeSeries.vcxproj">
