--- a/Tests/ClothoDB.Test/ClothoDB.Test.vcxproj
+++ b/Tests/ClothoDB.Test/ClothoDB.Test.vcxproj
@@ -170,7 +170,7 @@
     <ClCompile Include="TimeSeriesBucket.Tests.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\TimeSeries\TimeSeries.vcxproj">
+    <ProjectReference Include="..\..\src\core\core.vcxproj">
       <Project>{2778b793-150e-4b50-a407-a693b6d60b43}</Project>
     </ProjectReference>
   </ItemGroup>
