--- a/src/Common/Common.vcxproj
+++ b/src/Common/Common.vcxproj
@@ -138,7 +138,7 @@
   <ItemGroup>
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Result.h" />
-    <ClInclude Include="CircularBuffer.h" />
+    <ClInclude Include="circular_buffer.h" />
     <ClInclude Include="SlimRWLock.h" />
     <ClInclude Include="strfmt.h" />
   </ItemGroup>
