--- a/Tests/ClothoDB.Test/ClothoDB.Test.vcxproj
+++ b/Tests/ClothoDB.Test/ClothoDB.Test.vcxproj
@@ -166,8 +166,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="string_buffer.Tests.cpp" />
-    <ClCompile Include="ts_lookup.Tests.cpp" />
+    <ClCompile Include="serialize_block.Tests.cpp" />
+    <ClCompile Include="db_lookup.Tests.cpp" />
     <ClCompile Include="ts_properties.Tests.cpp" />
     <ClCompile Include="TemeSeries.Tests.cpp" />
     <ClCompile Include="TimeSeriesBucket.Tests.cpp" />
@@ -179,7 +179,13 @@
     <ProjectReference Include="..\..\src\cdb_compressor\cdb_compressor.vcxproj">
       <Project>{9ffe9725-7e77-48bd-851a-9a9e23e9a04f}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\src\core\core.vcxproj">
+    <ProjectReference Include="..\..\src\cdb_database\cdb_database.vcxproj">
+      <Project>{3b5d754b-7664-4836-a7e2-8e4672c2271a}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\cdb_server\cdb_server.vcxproj">
+      <Project>{3f81860b-4581-402a-99d8-361f6c30c1bb}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\cdb_timeseries\cdb_timeseries.vcxproj">
       <Project>{2778b793-150e-4b50-a407-a693b6d60b43}</Project>
     </ProjectReference>
   </ItemGroup>
