--- a/src/cdb_common/Common.vcxproj
+++ b/src/cdb_common/Common.vcxproj
@@ -137,22 +137,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="time_helpers.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="error_codes.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="MurmurHash3.h" />
+    <ClInclude Include="not_implemented_exception.h" />
     <ClInclude Include="Result.h" />
     <ClInclude Include="circular_buffer.h" />
+    <ClInclude Include="safe_buffer.h" />
+    <ClInclude Include="safe_buffer_list.h" />
     <ClInclude Include="sparsepp.h" />
     <ClInclude Include="srwlock.h" />
     <ClInclude Include="strfmt.h" />
-    <ClInclude Include="string_buffer.h" />
+    <ClInclude Include="serialize_block.h" />
     <ClInclude Include="time_fmt.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="time_helpers.cpp" />
     <ClCompile Include="MurmurHash3.cpp" />
-    <ClCompile Include="string_buffer.cpp" />
+    <ClCompile Include="safe_buffer.cpp" />
+    <ClCompile Include="safe_buffer_list.cpp" />
+    <ClCompile Include="serialize_block.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
