--- a/src/Tools/Benchmark/Benchmark.vcxproj
+++ b/src/Tools/Benchmark/Benchmark.vcxproj
@@ -146,17 +146,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="CompressBenchmarkTest.h" />
+    <ClInclude Include="data_point_provider.h" />
     <ClInclude Include="LoadTimeSeriesBenchmark.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Benchmark.cpp" />
+    <ClCompile Include="BucketBenchmark.cpp" />
     <ClCompile Include="CompressBenchmarkTest.cpp" />
+    <ClCompile Include="data_point_provider.cpp" />
     <ClCompile Include="LoadTimeSeriesBenchmark.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -164,6 +163,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TimeSeriesBenchmark.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\cdb_Common\Common.vcxproj">
