--- a/src/cdb_common/Common.vcxproj
+++ b/src/cdb_common/Common.vcxproj
@@ -137,6 +137,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="stop_watch.h" />
     <ClInclude Include="time_helpers.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="Constants.h" />
